--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.0",
-    "@angular/cdk": "^17.3.9",
+    "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
     "@angular/forms": "^17.2.0",
-    "@angular/material": "^17.3.9",
+    "@angular/material": "^17.3.10",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/youtube-player": "^17.3.9",
+    "@swimlane/ngx-charts": "^20.5.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "d3": "^7.9.0",
     "jquery": "^3.7.1",
     "materialize-css": "^1.0.0",
     "ngx-bootstrap": "^12.0.0",
