rutas funcionan correctamente, se agrega registro e incio sesion admin

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,13 @@
   from = "/inicioSesion"
   to = "/"
   status = 200
+
+[[redirects]]
+  from = "/inicioSesionAdmin"
+  to = "/"
+  status = 200
+
+[[redirects]]
+  from = "/registro"
+  to = "/"
+  status = 200
